...
import com.github.warnastrophy.R

object NavigationTestTags {
  const val TOP_BAR_TITLE = "topBarTitle"
  const val TOP_BAR_ERROR_ICON = "TopBar_ErrorIcon"
  const val BOTTOM_NAV = "bottomNav"
  const val TAB_MAP = "tabMap"
  const val TAB_PROFILE = "tabProfile"
  const val TAB_DASHBOARD = "tabDashboard"
  const val TOP_BAR_PREVIEW = "topBarPreview"
  const val BOTTOM_NAV_PREVIEW = "bottomNavPreview"
  const val BUTTON_BACK = "buttonBack"
  const val CONTACT_LIST = "contactList"
  const val HEALTH_CARD = "healthCard"
  const val LOGOUT = "logout"
...
