...
import com.google.maps.android.compose.GoogleMap
import com.google.maps.android.compose.MapProperties
import com.google.maps.android.compose.MapUiSettings
import com.google.maps.android.compose.rememberCameraPositionState

object MapScreenTestTags {
  const val GOOGLE_MAP_SCREEN = "mapScreen"
  const val FALLBACK_ACTIVITY_ERROR = "fallbackActivityError"
  const val TRACK_LOCATION_BUTTON = "trackLocationButton"
}

@Composable
fun MapScreen(
    viewModel: MapViewModel,
    cameraPositionState: CameraPositionState = rememberCameraPositionState(),
...
